--- a/main.html
+++ b/main.html
@@ -1,6 +1,9 @@
 
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" style="text/css" href="main.css" >
+<head>
 <body>
 
 <h1>My First Heading</h1>
