--- a/main.html
+++ b/main.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" style="text/css" href="main.css" >
+    <link rel="stylesheet" href="main.css" >
 <head>
 <body>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
+<div style="text-align: center; padding-top: 80px">
+  <div class="red"></div>
+</div>
 </body>
 </html>
+
 
